Fixed floating image size on mobile for About page

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -380,6 +380,14 @@ footer a {
     margin-top: 2em;
 }
 
+.image-float {
+    float: right;
+    margin: 0 0 16px 16px;
+    border: 5px solid #fff;
+    box-shadow: 2px 4px 10px rgba(0,0,0,0.15);
+    width: 150px;
+}
+
 
 /* For devices larger than 550px */
 @media (min-width: 880px) {
@@ -405,6 +413,11 @@ footer a {
         text-transform: uppercase;
         margin-bottom: 1em;
         letter-spacing: 0.05em;
+    }
+    
+    .image-float {
+        margin: 0 0 30px 30px;
+        width: 250px;
     }
     
     .intro {
